GPC/tests/examples/fail/errNot.gpc



int errNot() {
    bool x = true;
    bool y = ~x;
    return 5;
}
